--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="container"></div>
-
+<div class="text">Made For My Dad</div>
 <script type="x-shader/x-fragment" id="fragmentShader">
 
   varying float vStripes;
