--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="container"></div>
-<fluent-button class="text" onclick="star();">Made For My Dad</fluent-button>
+<fluent-button class="btn" onclick="star();">Made For My Dad</fluent-button>
+<div class="text"> Wish you a happy birthday 🎉!</div>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 <script>
 function star() {
